--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -24,6 +24,9 @@ section.filters button:hover {
 	width: 25%;
 	float: left;
 }
+.locations {
+	border-right: 1px solid #DDDDDD;
+}
 .locations h3, .amenities h3 {
 	font-weight: 600;
 	font-size: 16px;
