--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -11,6 +11,8 @@ article {
 	margin: 20px;
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
+	display: inline-block;
+	vertical-align: top;
 }
 article h2 {
 	font-size: 30px;
@@ -33,7 +35,7 @@ div.information {
 	border-top: 1px solid #DDDDDD;
 	border-bottom: 1px solid #DDDDDD;
 }
-div.max_guest, div.number_rooms. div.number_bathrooms {
+div.max_guest, div.number_rooms, div.number_bathrooms {
 	width: 100px;
 	height: 100%;
 	background-repeat: no-repeat;
@@ -52,6 +54,6 @@ div.max_guest, div.number_rooms. div.number_bathrooms {
 }
 div.user, div.description {
 	text-align: left;
-	margin-bottom: 5px;
-	margin-top: 5px;
+	margin-bottom: 10px;
+	margin-top: 10px;
 }
