--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -11,6 +11,7 @@ article {
 	margin: 20px;
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
+	display: inline-block;
 }
 article h2 {
 	font-size: 30px;
